Enhance java reflexion errors, which happened during 0-arg constructor invocation.